<resources>
    <string name="app_name">Quizzy Quizz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_here">Tap Here</string>
    <string name="quizzy_quizz">Quizzy Quizz</string>
    <string name="title_activity_programming">Programming Challenge</string>
    <string name="programming">Programming Challenge</string>
    <string name="questions">Questions</string>
    <string name="option_3">option 3</string>
    <string name="option_2">option 2</string>
    <string name="option_1">option 1</string>
    <string name="cars">Cars Challenge</string>
    <string name="loading">Loading…</string>
    <string name="social_networking_quizz">Social Networking Challenge</string>
    <string name="results">Results</string>
    <string name="percentage">percentage</string>
    <string name="score">Score</string>
    <string name="programming_questions">Programming Quizz questions</string>
    <string name="car_quizz_questions">Car quizz questions</string>
    <string name="social_media_quizz_questuions">Social media quizz questuions</string>
    <string name="exit">Exit</string>
    <string name="next_question">next question</string>
    <string name="results_summary">Results Summary</string>
    <string name="reset_summary">Reset Summary</string>
    <string name="summaryresults">summaryResults</string>
    <string name="long_press_for_summary">Long press for summary</string>
</resources>
