<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textIcon"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kaysherman.qizzy.ProgrammingActivity"
    tools:showIn="@layout/activity_programming">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/questions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black_overlay"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/gr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/option_1"
                android:padding="5dp"
                android:textColor="@color/SecondaryText"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/option_2"
                android:textColor="@color/SecondaryText"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/option_3"
                android:textColor="@color/SecondaryText"
                android:textSize="20sp" />

        </RadioGroup>
    </LinearLayout>
</FrameLayout>
