<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="@color/colorPrimary"
    tools:context="com.example.kaysherman.qizzy.ResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quizzy_quizz"
            android:textColor="@color/textIcon"
            android:layout_marginTop="60dp"
            android:fontFamily="cursive"
            android:keepScreenOn="true"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            android:textSize="50sp"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/results"
            android:textColor="@color/lightPrimary"
            android:keepScreenOn="true"
            android:layout_gravity="left"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="50dp"
        android:keepScreenOn="true"
android:fontFamily="serif-monospace"
        android:id="@+id/score"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/percentage"
        android:textColor="@color/colorPrimaryDark"
        android:layout_weight="0.5"
        android:keepScreenOn="true"
        android:fontFamily="serif-monospace"
        android:id="@+id/percentage"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:clickable="false"
        android:longClickable="false"
        android:theme="@style/RatingBar"
        android:numStars="5"/>

</LinearLayout>
