<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.kaysherman.qizzy.SummaryActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backArrow"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:gravity="center"
        android:contentDescription="@string/summaryresults"
        android:layout_gravity="left|top"
        android:layout_marginTop="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quizzy_quizz"
            android:textColor="@color/textIcon"
            android:layout_marginTop="60dp"
            android:fontFamily="cursive"
            android:keepScreenOn="true"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            android:textSize="50sp"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/results_summary"
            android:textColor="@color/lightPrimary"
            android:keepScreenOn="true"
            android:layout_gravity="left"
            android:fontFamily="serif"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textIcon"
            android:layout_weight="1"
            android:keepScreenOn="true"
            android:fontFamily="serif-monospace"
            android:id="@+id/SummaryResults"
            android:gravity="top|left"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_summary"
            android:background="@drawable/button_border"
            android:textColor="@color/textIcon"
            android:id="@+id/btnreset"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:fontFamily="serif-monospace"
            android:layout_gravity="bottom|center" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
